--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "react-particles": "^2.11.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^10.0.4"
   }
 }
